--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,8 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+.heading2 {
+  @apply text-lg font-semibold text-gray-800 mb-4;
+}
